[package]
name = "workers-rs-2"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ["d1"] }
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
